--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,9 +4,9 @@
 patreon: gomymobibsb
 open_collective: gomymobi
 #ko_fi: # Replace with a single Ko-fi username
-tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
+#tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
+#community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: PREScriptZ
-issuehunt: # Replace with a single IssueHunt username
-otechie: # Replace with a single Otechie username
-custom: [https://gomymobibsb-open-source.causevox.com/, https://fundrazr.com/gomymobibsb]
+#issuehunt: # Replace with a single IssueHunt username
+#otechie: # Replace with a single Otechie username
+custom: ["https://gomymobibsb-open-source.causevox.com/", "https://fundrazr.com/gomymobibsb"]
