--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-# These are supported funding model platforms
+# we'll never touch any fund until the goal reached. Our goal is at least $500,000 per year, crossed all funding platforms
 
 #github: PremiumScript
 patreon: gomymobibsb
